--- a/index.html
+++ b/index.html
@@ -58,7 +58,27 @@
                 <img src="img/Comercial-2.png" alt="Internet">
             </div>
         </section>
+        <section class="informativo">
+            <div>
+                <p>Trabajamos con la mejor tecnología permitiendo a nuestros clientes contar con la última tecnología en conexión además de tener un equipo profesional y capacitado para tener la mejor atención en el menos tiempo.</p>
+                <img src="img/tecnico.png" alt="">
+            </div>
+        </section>
     </main>
+    <footer>
+        
+        <div>
+            <a href=""><h3>Nuestras Redes</h3></a>
+            <a href=""><i class="fab fa-facebook-square"></i></a>
+            <a href=""><i class="fab fa-twitter-square"></i></a>
+            <a href=""><i class="fab fa-instagram-square"></i></a>
+            <a href=""><i class="fab fa-youtube-square"></i></a>
+        </div>
+        <div>
+            <a href="">Home</a>
+        </div>
+        &copy Derechos Reservados 2021
+    </footer>
 </body>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/jquery.bxslider.js"></script>
