--- a/index.html
+++ b/index.html
@@ -64,20 +64,41 @@
                 <img src="img/tecnico.png" alt="">
             </div>
         </section>
+        <section class="crc">
+            <img src="img/bamnnercrcabril2020.jpg" alt="">
+        </section>
     </main>
-    <footer>
-        
-        <div>
+    <footer>    
+        <div class="columna columna-50">
+            <ul class="menu">
+                <li><a href="#acerca">Acerca de</a></li>
+                <li><a href="#television">Television</a></li>
+                <li><a href="#internet">Internet</a></li>
+                <li><a href="">Proteccion al Usuario</a></li>
+                <li><a href="">Paga tu Factura</a></li>
+                <li><a href="">Contactanos</a></li>
+            </ul>
+        </div>
+        <div class="columna columna-50 derecha">
+            <ul class="menu">
+                <li><a href="">Indicadores</a></li>
+                <li><a href="">Resolucion 19012 2020</a></li>
+                <li><a href="">Link 1</a></li>
+                <li><a href="">Link 1</a></li>
+                <li><a href="">Link 1</a></li>
+                <li><a href="">Link 1</a></li>
+            </ul>
+        </div>
+        <div class="columna columna-100">
             <a href=""><h3>Nuestras Redes</h3></a>
-            <a href=""><i class="fab fa-facebook-square"></i></a>
-            <a href=""><i class="fab fa-twitter-square"></i></a>
-            <a href=""><i class="fab fa-instagram-square"></i></a>
-            <a href=""><i class="fab fa-youtube-square"></i></a>
+            <a href="" class="redes"><i class="fab fa-facebook-square"></i></a>
+            <a href="" class="redes"><i class="fab fa-twitter-square"></i></a>
+            <a href="" class="redes"><i class="fab fa-instagram-square"></i></a>
+            <a href="" class="redes"><i class="fab fa-youtube-square"></i></a>
+        </div>  
+        <div class="final-footer">
+            &copy Derechos Reservados 2021
         </div>
-        <div>
-            <a href="">Home</a>
-        </div>
-        &copy Derechos Reservados 2021
     </footer>
 </body>
 <script src="js/jquery-3.6.0.min.js"></script>
