--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
@@ -15,11 +14,11 @@
 <body>
     <header>
         <div class="contenedor">
-            <a href="">
+            <a href="index.html">
                 <img src="img/Logo.svg" alt="Imporiente" class="imagen">
             </a>
             <nav>
-                <a href="#acerca">Acerca de</a>
+                <a href="Enlaces/acercade.html">Acerca de</a>
                 <a href="#television">Television</a>
                 <a href="#internet">Internet</a>
                 <a href="">Proteccion al Usuario</a>
@@ -83,10 +82,10 @@
             <ul class="menu">
                 <li><a href="">Indicadores</a></li>
                 <li><a href="">Resolucion 19012 2020</a></li>
+<!--                 <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li>
                 <li><a href="">Link 1</a></li>
-                <li><a href="">Link 1</a></li>
-                <li><a href="">Link 1</a></li>
+                <li><a href="">Link 1</a></li> -->
             </ul>
         </div>
         <div class="columna columna-100">
