--- a/Enlaces/acercade.html
+++ b/Enlaces/acercade.html
@@ -36,7 +36,6 @@
                 <li><img src="../img/slider/3_1.png" alt=""></li>
             </ul>
         </section>
-        <!-- Slider De contenido -->
         <section class="empresa">
             <div class="vision">
                <h2>Visión</h2>
@@ -65,8 +64,8 @@
     </main>
     <footer>    
         <div class="columna columna-50">
-            <ul class="menu">
-                <li><a href="#acerca">Acerca de</a></li>
+            <ul class="menu-footer">
+                <li><a href="#">Acerca de</a></li>
                 <li><a href="#television">Television</a></li>
                 <li><a href="#internet">Internet</a></li>
                 <li><a href="">Proteccion al Usuario</a></li>
@@ -75,7 +74,7 @@
             </ul>
         </div>
         <div class="columna columna-50 derecha">
-            <ul class="menu">
+            <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
                 <li><a href="">Resolucion 19012 2020</a></li>
 <!--                 <li><a href="">Link 1</a></li>
