--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="Enlaces/acercade.html">Acerca de</a>
                 <a href="#television">Television</a>
                 <a href="#internet">Internet</a>
-                <a href="">Proteccion al Usuario</a>
+                <a href="Enlaces/proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
             </nav>
@@ -69,17 +69,17 @@
     </main>
     <footer>    
         <div class="columna columna-50">
-            <ul class="menu">
-                <li><a href="#acerca">Acerca de</a></li>
+            <ul class="menu-footer">
+                <li><a href="Enlaces/acercade.html">Acerca de</a></li>
                 <li><a href="#television">Television</a></li>
-                <li><a href="#internet">Internet</a></li>
+                <li><a href="proteccion.html">Internet</a></li>
                 <li><a href="">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
                 <li><a href="">Contactanos</a></li>
             </ul>
         </div>
         <div class="columna columna-50 derecha">
-            <ul class="menu">
+            <ul class="menu-footer">
                 <li><a href="">Indicadores</a></li>
                 <li><a href="">Resolucion 19012 2020</a></li>
 <!--                 <li><a href="">Link 1</a></li>
