--- a/Enlaces/acercade.html
+++ b/Enlaces/acercade.html
@@ -21,7 +21,7 @@
                 <a href="#acercade">Acerca de</a>
                 <a href="#">Television</a>
                 <a href="#">Internet</a>
-                <a href="">Proteccion al Usuario</a>
+                <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
             </nav>
@@ -68,7 +68,7 @@
                 <li><a href="#">Acerca de</a></li>
                 <li><a href="#television">Television</a></li>
                 <li><a href="#internet">Internet</a></li>
-                <li><a href="">Proteccion al Usuario</a></li>
+                <li><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
                 <li><a href="">Contactanos</a></li>
             </ul>
