--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <ul class="menu-footer">
                 <li><a href="Enlaces/acercade.html">Acerca de</a></li>
                 <li><a href="#television">Television</a></li>
-                <li><a href="proteccion.html">Internet</a></li>
-                <li><a href="">Proteccion al Usuario</a></li>
+                <li><a href="">Internet</a></li>
+                <li><a href="Enlaces/proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
                 <li><a href="">Contactanos</a></li>
             </ul>
