--- a/Enlaces/proteccion.html
+++ b/Enlaces/proteccion.html
@@ -21,7 +21,7 @@
                 <a href="#acercade">Acerca de</a>
                 <a href="#">Television</a>
                 <a href="#">Internet</a>
-                <a href="">Proteccion al Usuario</a>
+                <a href="#">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
             </nav>
@@ -91,10 +91,10 @@
     <footer>    
         <div class="columna columna-50">
             <ul class="menu-footer">
-                <li><a href=""><a href="#">Acerca de</a></li>
+                <li><a href=""><a href="acercade.html">Acerca de</a></li>
                 <li><a href=""><a href="#television">Television</a></li>
                 <li><a href=""><a href="#internet">Internet</a></li>
-                <li><a href=""><a href="">Proteccion al Usuario</a></li>
+                <li><a href=""><a href="#">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
                 <li><a href=""><a href="">Contactanos</a></li>
             </ul>
