--- a/Enlaces/proteccion.html
+++ b/Enlaces/proteccion.html
@@ -40,14 +40,14 @@
                 <div class="columna-33">
                     <ul>
                         <li><a href="../pdf/CONTROL PARENTAL NAVEGADORES.pdf" target="_blank">REGULACIÓN SECTOR TIC</a></li>
-                        <li><a href=""><a href="">Resolución CRC 5344 de 2018</li>
-                        <li><a href="">Resolución CRC 5337 de 2018</li>
-                        <li><a href="">Resolución CRC 5322 de 2018</li>
-                        <li><a href="">Decreto 90 del 18 de Enero de 2018</li>
-                        <li><a href="">Resolución CRC 5321 de 2018</li>
-                        <li><a href="">Resolución CRC 5397 de 2018</li>
-                        <li><a href="">Resolución CRC 5299 de 2018</li>
-                        <li><a href="">Resolución CRC 5300 de 2018</li>
+                        <li><a href="../pdf/resolucion_crc_5397_de_2018.pdf"target="_blank">Resolución CRC 5397 de 2018</a></li>
+                        <li><a href="../pdf/resolucion_crc_5344_de_2018.pdf"target="_blank">Resolución CRC 5344 de 2018</a></li>
+                        <li><a href="../pdf/resolucion_crc_5337_de_2018.pdf"target="_blank">Resolución CRC 5337 de 2018</a></li>
+                        <li><a href="../pdf/resolucion_crc_5322_de_2018.pdf"target="_blank">Resolución CRC 5322 de 2018</a></li>
+                        <li><a href="../pdf/decreto_90_del_18_enero_de_2018.pdf"target="_blank">Decreto 90 del 18 de Enero de 2018</a></li>
+                        <li><a href="../pdf/resolucion_crc_5321_de_2018.pdf"target="_blank">Resolución CRC 5321 de 2018</a></li>
+                        <li><a href="../pdf/resolucion_crc_5299_de_2018.pdf"target="_blank">Resolución CRC 5299 de 2018</a></li>
+                        <li><a href="../pdf/resolucion_crc_5300_de_2018.pdf"target="_blank">Resolución CRC 5300 de 2018</a></li>
                     </ul>
                 </div>
                 <div class="columna-33">
