--- a/Enlaces/acercade.html
+++ b/Enlaces/acercade.html
@@ -19,7 +19,7 @@
             </a>
             <nav>
                 <a href="#acercade">Acerca de</a>
-                <a href="#">Television</a>
+                <a href="television.html">Television</a>
                 <a href="#">Internet</a>
                 <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
@@ -66,7 +66,7 @@
         <div class="columna columna-50">
             <ul class="menu-footer">
                 <li><a href="#">Acerca de</a></li>
-                <li><a href="#television">Television</a></li>
+                <li><a href="television.html">Television</a></li>
                 <li><a href="#internet">Internet</a></li>
                 <li><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
