--- a/Enlaces/proteccion.html
+++ b/Enlaces/proteccion.html
@@ -18,8 +18,8 @@
                 <img src="../img/Logo.svg" alt="Imporiente" class="imagen">
             </a>
             <nav>
-                <a href="#acercade">Acerca de</a>
-                <a href="#">Television</a>
+                <a href="acercade.html">Acerca de</a>
+                <a href="television.html">Television</a>
                 <a href="#">Internet</a>
                 <a href="#">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
@@ -52,8 +52,8 @@
                 </div>
                 <div class="columna-33">
                     <ul>
-                        <li><a href="">Mapa Redes Fibra Óptica Propia</li>
-                        <li><a href="">Mapa de Cobertura</li>
+                        <li><a href="https://www.google.com/maps/d/viewer?mid=1DFcnN3H5SbfTSZEQsylyrvu11q_XhRYI&ll=4.812374095130433%2C-74.35147871063967&z=20" target="_blank">Mapa Redes Fibra Óptica Propia</li>
+                        <li><a href="https://www.google.com/maps/d/viewer?mid=1DFcnN3H5SbfTSZEQsylyrvu11q_XhRYI&ll=4.812374095130433%2C-74.35147871063967&z=20" target="_blank">Mapa de Cobertura</li>
                         <li><a href="">Planes y Tarifas</li>
                         <li><a href="">Términos, condiciones y garantía Wifi Extendido</li>
                         <li><a href="">Factores que limitan la navegación</li>
@@ -92,7 +92,7 @@
         <div class="columna columna-50">
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
-                <li><a href=""><a href="#television">Television</a></li>
+                <li><a href=""><a href="television.html">Television</a></li>
                 <li><a href=""><a href="#internet">Internet</a></li>
                 <li><a href=""><a href="#">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
