--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
             <nav>
                 <a href="Enlaces/acercade.html">Acerca de</a>
-                <a href="#television">Television</a>
+                <a href="Enlaces/television.html">Television</a>
                 <a href="#internet">Internet</a>
                 <a href="Enlaces/proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
@@ -71,7 +71,7 @@
         <div class="columna columna-50">
             <ul class="menu-footer">
                 <li><a href="Enlaces/acercade.html">Acerca de</a></li>
-                <li><a href="#television">Television</a></li>
+                <li><a href="Enlaces/television.html">Television</a></li>
                 <li><a href="">Internet</a></li>
                 <li><a href="Enlaces/proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
