--- a/Enlaces/television.html
+++ b/Enlaces/television.html
@@ -18,7 +18,7 @@
                 <img src="../img/Logo.svg" alt="Imporiente" class="imagen">
             </a>
             <nav>
-                <a href="#acercade">Acerca de</a>
+                <a href="acercade.html">Acerca de</a>
                 <a href="#">Television</a>
                 <a href="#">Internet</a>
                 <a href="#">Proteccion al Usuario</a>
@@ -405,7 +405,7 @@
         <div class="columna columna-50">
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
-                <li><a href=""><a href="#television">Television</a></li>
+                <li><a href=""><a href="#">Television</a></li>
                 <li><a href=""><a href="#internet">Internet</a></li>
                 <li><a href=""><a href="#">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
