--- a/Enlaces/combos.html
+++ b/Enlaces/combos.html
@@ -18,10 +18,10 @@
                 <img src="../img/Logo.svg" alt="Imporiente" class="imagen">
             </a>
             <nav>
-                <a href="#acercade">Acerca de</a>
+                <a href="acercade.html">Acerca de</a>
                 <a href="#">Television</a>
                 <a href="#">Internet</a>
-                <a href="#">Proteccion al Usuario</a>
+                <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
             </nav>
@@ -30,7 +30,51 @@
     </header>
     <main>
         <section>
+            <div class="banner-titulo">
+                <img src="../img/Internet.png" alt="">
+            </div>
         </section>
+
+        <section>
+                <div>
+                    <h1>Planes Sin Clausulas de Permantenica</h1>
+                </div>
+                <div class="tabla-precios">
+                    <div class="mes">
+                        <h1 class="item">Basico 3 Megas</h1>
+                        <h3 class="item"><sup>$ </sup>55.000</h2>
+                        <ul class="item">
+                            <li>a</li>
+                            <li>a</li>
+                        </ul>
+                        <h4 class="item"><a href="">Seleccionar Plan</a></h3>
+                    </div>
+                    <div class="mes"></div>
+                    <div class="mes"></div>
+                    <div class="mes"></div>
+                    <div class="mes"></div>
+                </div>
+
+<!--             <div>
+                <h1>Planes Con Clausulas de Permantenica</h1>
+                <div class="tabla-precios">
+                    <div class="mes">
+                        <h1 class="item">Basico 3 Megas</h1>
+                        <h3 class="item"><sup>$ </sup>55.000</h2>
+                        <ul class="item">
+                            <li>a</li>
+                            <li>a</li>
+                        </ul>
+                        <h4 class="item">Price</h3>
+                    </div>
+                    <div class="mes"></div>
+                    <div class="mes"></div>
+                    <div class="mes"></div>
+                    <div class="mes"></div>
+                </div>
+            </div> -->
+        </section>
+
         <!-- Imagen de Covid19 -->
         <section class="crc">
             <img src="../img/bamnnercrcabril2020.jpg" alt="">
@@ -40,9 +84,9 @@
         <div class="columna columna-50">
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
-                <li><a href=""><a href="#television">Television</a></li>
+                <li><a href=""><a href="#">Television</a></li>
                 <li><a href=""><a href="#internet">Internet</a></li>
-                <li><a href=""><a href="#">Proteccion al Usuario</a></li>
+                <li><a href=""><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
                 <li><a href=""><a href="">Contactanos</a></li>
             </ul>
@@ -51,8 +95,8 @@
             <ul class="menu-footer">
                 <li><a href=""><a href="">Indicadores</a></li>
                 <li><a href=""><a href="">Resolucion 19012 2020</a></li>
+                <li><a href=""><a href="">PQR</a></li>
 <!--                 <li><a href=""><a href="">Link 1</a></li>
-                <li><a href=""><a href="">Link 1</a></li>
                 <li><a href=""><a href="">Link 1</a></li>
                 <li><a href=""><a href="">Link 1</a></li> -->
             </ul>
