--- a/Enlaces/proteccion.html
+++ b/Enlaces/proteccion.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="acercade.html">Acerca de</a>
                 <a href="television.html">Television</a>
-                <a href="#">Internet</a>
+                <a href="#">Combos</a>
                 <a href="#">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
@@ -93,7 +93,7 @@
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
                 <li><a href=""><a href="television.html">Television</a></li>
-                <li><a href=""><a href="#internet">Internet</a></li>
+                <li><a href=""><a href="#internet">Combos</a></li>
                 <li><a href=""><a href="#">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
                 <li><a href=""><a href="">Contactanos</a></li>
