--- a/Enlaces/television.html
+++ b/Enlaces/television.html
@@ -20,8 +20,8 @@
             <nav>
                 <a href="acercade.html">Acerca de</a>
                 <a href="#">Television</a>
-                <a href="#">Internet</a>
-                <a href="#">Proteccion al Usuario</a>
+                <a href="#">Combos</a>
+                <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
             </nav>
@@ -38,255 +38,255 @@
                 <ul>
                     <li>
                         <img src="../img/Canales/Ewtn.png" alt="">
-                        <p>50</p>
+                        <p>92</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Cristovisión_Logo.png" alt="">
-                        <p>50</p>
+                        <p>91</p>
                     </li>
                     <li>
                         <img src="../img/Canales/teleamiga.png" alt="">
-                        <p>50</p>
+                        <p>90</p>
                     </li>
                     <li>
                         <img src="../img/Canales/BethelTV.png" alt="">
-                        <p>50</p>
+                        <p>94</p>
                     </li>
                     <li>
                         <img src="../img/Canales/3abn.png" alt="">
-                        <p>50</p>
+                        <p>93</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Univision.png" alt="">
-                        <p>50</p>
+                        <p>66</p>
                     </li>
                 </ul>
                 <h4>Noticias</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/cablenoticias.png" alt="">
-                        <p>50</p>
+                        <p>86</p>
                     </li>
                     <li>
                         <img src="../img/Canales/cnn.png" alt="">
-                        <p>50</p>
+                        <p>84</p>
                     </li>
                     <li>
                         <img src="../img/Canales/rt.png" alt="">
-                        <p>50</p>
+                        <p>87</p>
                     </li>
                     <li>
                         <img src="../img/Canales/dw.png" alt="">
-                        <p>50</p>
+                        <p>88</p>
                     </li>
                 </ul>
                 <h4>Culturales</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/id.png" alt="">
-                        <p>50</p>
+                        <p>23</p>
                     </li>
                     <li>
                         <img src="../img/Canales/turbo.png" alt="">
-                        <p>50</p>
+                        <p>25</p>
                     </li>
                     <li>
                         <img src="../img/Canales/animalplanet.png" alt="">
-                        <p>50</p>
+                        <p>24</p>
                     </li>
                     <li>
                         <img src="../img/Canales/tvagro.png" alt="">
-                        <p>50</p>
+                        <p>29</p>
                     </li>
                     <li>
                         <img src="../img/Canales/discovery.png" alt="">
-                        <p>50</p>
+                        <p>22</p>
                     </li>
                     <li>
                         <img src="../img/Canales/natgeowild.png" alt="">
-                        <p>50</p>
+                        <p>27</p>
                     </li>
                     <li>
                         <img src="../img/Canales/natgeo.png" alt="">
-                        <p>50</p>
+                        <p>28</p>
                     </li>
                     <li>
                         <img src="../img/Canales/tlc.png" alt="">
-                        <p>50</p>
+                        <p>57</p>
                     </li>
                 </ul>
                 <h4>Musica</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/Much.png" alt="">
-                        <p>50</p>
+                        <p>68</p>
                     </li>
                     <li>
                         <img src="../img/Canales/htv.png" alt="">
-                        <p>50</p>
+                        <p>71</p>
                     </li>
                     <li>
                         <img src="../img/Canales/rumba.png" alt="">
-                        <p>50</p>
+                        <p>69</p>
                     </li>
                     <li>
                         <img src="../img/Canales/telenostalgia.png" alt="">
-                        <p>50</p>
+                        <p>70</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Ranchenato.png" alt="">
-                        <p>50</p>
+                        <p>73</p>
                     </li>
                 </ul>
                 <h4>Infantiles</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/discoverykids.png" alt="">
-                        <p>50</p>
+                        <p>14</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Disneychannel.png" alt="">
-                        <p>50</p>
+                        <p>15</p>
                     </li>
                     <li>
                         <img src="../img/Canales/xd.png" alt="">
-                        <p>50</p>
+                        <p>19</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Disney_Junior_2017.png" alt="">
-                        <p>50</p>
+                        <p>20</p>
                     </li>
                     <li>
                         <img src="../img/Canales/cn.png" alt="">
-                        <p>50</p>
+                        <p>18</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Tooncast.png" alt="">
-                        <p>50</p>
+                        <p>17</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Boomerang.png" alt="">
-                        <p>50</p>
+                        <p>16</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Natgeokids.png" alt="">
-                        <p>50</p>
+                        <p>21</p>
                     </li>
                 </ul>
                 <h4>Deportes</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/esp.png" alt="">
-                        <p>50</p>
+                        <p>33</p>
                     </li>
                     <li>
                         <img src="../img/Canales/ESPN2.png" alt="">
-                        <p>50</p>
+                        <p>34</p>
                     </li>
                     <li>
                         <img src="../img/Canales/espn3.png" alt="">
-                        <p>50</p>
+                        <p>35</p>
                     </li>
                     <li>
                         <img src="../img/Canales/foxSport.png" alt="">
-                        <p>50</p>
+                        <p>30</p>
                     </li>
                     <li>
                         <img src="../img/Canales/foxSport2.png" alt="">
-                        <p>50</p>
+                        <p>31</p>
                     </li>
                     <li>
                         <img src="../img/Canales/foxSport3.png" alt="">
-                        <p>50</p>
+                        <p>32</p>
                     </li>
                 </ul>
                 <h4>Hogar</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/Ve_Plus.png" alt="">
-                        <p>50</p>
+                        <p>62</p>
                     </li>
                     <li>
                         <img src="../img/Canales/tlnovelas-logo.png" alt="">
-                        <p>50</p>
+                        <p>65</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Fox_life.png" alt="">
-                        <p>50</p>
+                        <p>58</p>
                     </li>
                     <li>
                         <img src="../img/Canales/estrellas.png" alt="">
-                        <p>50</p>
+                        <p>64</p>
                     </li>
                     <li>
                         <img src="../img/Canales/hyh.png" alt="">
-                        <p>50</p>
+                        <p>26</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Gourmet.png" alt="">
-                        <p>50</p>
+                        <p>59</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Hogartv.png" alt="">
-                        <p>50</p>
+                        <p>55</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Pasiones.png" alt="">
-                        <p>50</p>
+                        <p>63</p>
                     </li>
                     <li>
                         <img src="../img/Canales/maschic.png" alt="">
-                        <p>50</p>
+                        <p>60</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Food_Network_New.png" alt="">
-                        <p>50</p>
+                        <p>56</p>
                     </li>
                 </ul>
                 <h4>Series</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/starchannel.png" alt="">
-                        <p>50</p>
+                        <p>37</p>
                     </li>
                     <li>
                         <img src="../img/Canales/fx.png" alt="">
-                        <p>50</p>
+                        <p>38</p>
                     </li>
                     <li>
                         <img src="../img/Canales/TNT_Series.png" alt="">
-                        <p>50</p>
+                        <p>40</p>
                     </li>
                     <li>
                         <img src="../img/Canales/fxm.png" alt="">
-                        <p>50</p>
+                        <p>48</p>
                     </li>
                     <li>
                         <img src="../img/Canales/BitMe.png" alt="">
-                        <p>50</p>
+                        <p>N/A</p>
                     </li>
                 </ul>
                 <h4>Peliculas</h4>
                 <ul>
                     <li>
                         <img src="../img/Canales/Cinecanal.png" alt="">
-                        <p>50</p>
+                        <p>46</p>
                     </li>
                     <li>
                         <img src="../img/Canales/depelicula.png" alt="">
-                        <p>50</p>
+                        <p>44</p>
                     </li>
                     <li>
                         <img src="../img/Canales/amc.png" alt="">
-                        <p>50</p>
+                        <p>39</p>
                     </li>
                     <li>
                         <img src="../img/Canales/tnt.png" alt="">
-                        <p>50</p>
+                        <p>51</p>
                     </li>
                     <li>
                         <img src="../img/Canales/space.png" alt="">
-                        <p>50</p>
+                        <p>49</p>
                     </li>
                     <li>
                         <img src="../img/Canales/tcm.png" alt="">
@@ -294,94 +294,94 @@
                     </li>
                     <li>
                         <img src="../img/Canales/golden.png" alt="">
-                        <p>50</p>
+                        <p>45</p>
                     </li>
                     <li>
                         <img src="../img/Canales/dhe.png" alt="">
-                        <p>50</p>
+                        <p>47</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Multipremier.png" alt="">
-                        <p>50</p>
+                        <p>52</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Cinelatino.png" alt="">
-                        <p>50</p>
+                        <p>53</p>
                     </li>
                 </ul>
                 <h4>Nacionales</h4>
                 <ul>
                     <li>
-                        <img src="../img/Canales/Cinelatino.png" alt="">
-                        <p>50</p>
+                        <img src="../img/Canales/Imporiente.png" alt="">
+                        <p>03</p>
                     </li>
                     <li>
                         <img src="../img/Canales/13.png" alt="">
-                        <p>50</p>
+                        <p>13</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Congreso.png" alt="">
-                        <p>50</p>
+                        <p>80</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Teleantioquia.png" alt="">
-                        <p>50</p>
+                        <p>74</p>
                     </li>
                     <li>
                         <img src="../img/Canales/Telepacífico.png" alt="">
-                        <p>50</p>
+                        <p>75</p>
                     </li>
                     <li>
                         <img src="../img/Canales/TELECAFE.png" alt="">
-                        <p>50</p>
+                        <p>76</p>
                     </li>
                     <li>
                         <img src="../img/Canales/canaltro.png" alt="">
-                        <p>50</p>
+                        <p>78</p>
                     </li>
                     <li>
                         <img src="../img/Canales/capital.png" alt="">
-                        <p>50</p>
+                        <p>02</p>
                     </li>
                     <li>
                         <img src="../img/Canales/señalColombia.png" alt="">
-                        <p>50</p>
+                        <p>11</p>
                     </li>
                     <li>
                         <img src="../img/Canales/rcn.png" alt="">
-                        <p>50</p>
+                        <p>08</p>
                     </li>
                     <li>
                         <img src="../img/Canales/caracol.png" alt="">
-                        <p>50</p>
+                        <p>10</p>
                     </li>
                     <li>
                         <img src="../img/Canales/citytv.png" alt="">
-                        <p>50</p>
+                        <p>12</p>
                     </li>
                     <li>
                         <img src="../img/Canales/canaluno.png" alt="">
-                        <p>50</p>
+                        <p>07</p>
                     </li>
                     <li>
                         <img src="../img/Canales/SURAMTV.png" alt="">
-                        <p>50</p>
+                        <p>06</p>
                     </li>
                     <li>
                         <img src="../img/Canales/institucional.png" alt="">
-                        <p>50</p>
+                        <p>09</p>
                     </li>
                     <li>
                         <img src="../img/Canales/telecaribe.png" alt="">
-                        <p>50</p>
+                        <p>77</p>
                     </li>
                     <li>
                         <img src="../img/Canales/telemedellin.png" alt="">
-                        <p>50</p>
+                        <p>79</p>
                     </li>
                     <li>
                         <img src="../img/Canales/telesur.png" alt="">
-                        <p>50</p>
+                        <p>82</p>
                     </li>
                 </ul>
             </div>
@@ -406,8 +406,8 @@
             <ul class="menu-footer">
                 <li><a href=""><a href="acercade.html">Acerca de</a></li>
                 <li><a href=""><a href="#">Television</a></li>
-                <li><a href=""><a href="#internet">Internet</a></li>
-                <li><a href=""><a href="#">Proteccion al Usuario</a></li>
+                <li><a href=""><a href="#internet">Combos</a></li>
+                <li><a href=""><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href=""><a href="">Paga tu Factura</a></li>
                 <li><a href=""><a href="">Contactanos</a></li>
             </ul>
