--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             <nav>
                 <a href="Enlaces/acercade.html">Acerca de</a>
                 <a href="Enlaces/television.html">Television</a>
-                <a href="#internet">Internet</a>
+                <a href="#internet">Combos</a>
                 <a href="Enlaces/proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
+                <a href="">PQR</a>
             </nav>
             <a href="" class="menu"><i class="fas fa-bars"></i></a>
         </div>
@@ -72,7 +73,7 @@
             <ul class="menu-footer">
                 <li><a href="Enlaces/acercade.html">Acerca de</a></li>
                 <li><a href="Enlaces/television.html">Television</a></li>
-                <li><a href="">Internet</a></li>
+                <li><a href="">Combos</a></li>
                 <li><a href="Enlaces/proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
                 <li><a href="">Contactanos</a></li>
