--- a/Enlaces/acercade.html
+++ b/Enlaces/acercade.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="#acercade">Acerca de</a>
                 <a href="television.html">Television</a>
-                <a href="#">Internet</a>
+                <a href="#">Combos</a>
                 <a href="proteccion.html">Proteccion al Usuario</a>
                 <a href="">Paga tu Factura</a>
                 <a href="">Contactanos</a>
@@ -67,7 +67,7 @@
             <ul class="menu-footer">
                 <li><a href="#">Acerca de</a></li>
                 <li><a href="television.html">Television</a></li>
-                <li><a href="#internet">Internet</a></li>
+                <li><a href="#internet">Combos</a></li>
                 <li><a href="proteccion.html">Proteccion al Usuario</a></li>
                 <li><a href="">Paga tu Factura</a></li>
                 <li><a href="">Contactanos</a></li>
